--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Bens Page</title>
 </head>
 <body>
+<main>
 <h1>Benjamin Tautfest</h1>
+<nav>
+<a href="">Contact</a><a href=""></a>
+<a href="">Biography</a><a href=""></a>
+</nav>
+<img src="images/ben.jpg" alt="">
+<p> Guten Tag, Ich bin Grafiker und Front-End-Entwickler und mache funktionale und schöne Webseiten und Webapps</p>
+
+<h2>Coding Skills</h2>
+<ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Javascript</li>
+    <li>React</li>
+</ul>
+<h2>Design Skills</h2>
+<ul>
+    <li>Illustration</li>
+    <li></li>
+</ul>
+</main>
 </body>
 </html>
