Update design skills

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="">Biography</a><a href="#contact"></a>
 </nav>
 <img src="images/ben.jpg" alt="">
-<p> Guten Tag, Ich bin Grafiker und Front-End-Entwickler und mache funktionale und schöne Webseiten und Webapps</p>
+<p> Ich bin Grafiker und Front-End-Entwickler und mache funktionale und schöne Webseiten und Webapps</p>
 
 <h2>Coding Skills</h2>
 <ul>
@@ -27,6 +27,7 @@
     <li>Illustration</li>
     <li>UX-Design</li>
     <li>Bildbearbeitung</li>
+    <li>Logo-Design</li>
 </ul>
 <section id="contact"> 
     <a href="tel:+491795071364">Telefon</a>
