Correct anchor links

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <main>
 <h1>Benjamin Tautfest</h1>
 <nav>
-<a href="">Contact</a><a href="#contact"></a>
-<a href="">Biography</a><a href="#contact"></a>
+<a href="#contact">Contact</a>
+<a href="#biography">Biography</a>
 </nav>
+
 <img src="images/ben.jpg" alt="">
 <p> Ich bin Grafiker und Front-End-Entwickler und mache funktionale und schöne Webseiten und Webapps</p>
 
@@ -23,16 +24,20 @@
     <li>React</li>
 </ul>
 <h2>Design Skills</h2>
+
 <ul>
     <li>Illustration</li>
     <li>UX-Design</li>
     <li>Bildbearbeitung</li>
     <li>Logo-Design</li>
 </ul>
+
 <section id="contact"> 
+    <h3>Kontakt</h3>
     <a href="tel:+491795071364">Telefon</a>
     <a href="mailto:b.tautfest@gmx.de">E-Mail</a>
 </section>
+
 <section id="github">
     <img src="" alt="">
     <h3>Github</h3>
@@ -49,6 +54,8 @@
     <h3>Linked In</h3>
 </section>
 
+<section id="biography">   
+
 <h2>Werdegang</h2>
 <p>
     Ich bin seit vielen Jahren im Bereich Web-Design tätig und nun auch voll in die Frontend-Entwicklung 
@@ -60,6 +67,9 @@
     <li>1994 - 1999 Studium Visuelle Kommunikation Fachhochschule Hannover </li>
     <li>1990 - 1994 Studium Politik & Amerikanistik Universität Hannvover</li>
 </ul>
+</section>
 </main>
+
+<footer>Benjamin Tautfest 2020</footer>
 </body>
 </html>
