--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </nav>
 
 <img src="images/ben.jpg" alt="">
-<p> Ich bin Grafiker und Front-End-Entwickler und mache funktionale und schöne Webseiten und Webapps</p>
+<p> Ich bin Grafiker und Front-End-Entwickler und mache funktionale und schöne Webseiten und Webapps.</p>
 
 <h2>Coding Skills</h2>
 <ul>
