Add first styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href="#biography">Biography</a>
 </nav>
 
-<img src="images/ben.jpg" alt="">
+<img src="images/ben.jpg" alt="" class="portrait">
 <p> Ich bin Designer und Front-End-Entwickler. Ich entwickle funktionale, responsive und individuelle Webseiten und Webapps.</p>
 
 <h2>Coding Skills</h2>
