Mobile Styles first draft

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet"> 
     <title>Bens Page</title>
 </head>
 <body>
+    <header>
+        <h1>Benjamin Tautfest</h1>
+        </header>
 <main>
-<h1>Benjamin Tautfest</h1>
+
 <nav>
 <a href="#contact">Contact</a>
 <a href="#biography">Biography</a>
@@ -39,21 +43,25 @@
     <a href="mailto:b.tautfest@gmx.de">E-Mail</a>
 </section>
 
-<section id="github">
-    <img src="" alt="">
-    <h3>Github</h3>
-</section>
+<h2>Social</h2>
 
-<section id="codepen">
-    <img src="" alt="">
-    <h3>Codepen</h3>
-
+<a href="https://github.com/benjamintautfest">
+<section id="github" class="social_card">
+    <img src="images/github.png" alt="github">
 </section>
+</a>
 
-<section id="Linked In">
-    <img src="" alt="">
-    <h3>Linked In</h3>
+<a href="https://codepen.io/benjamintautfest">
+<section id="codepen" class="social_card">
+   <img src="images/codepen.png" alt="codepen">
 </section>
+</a>
+
+<a href="https://www.linkedin.com/in/benjamin-tautfest-a40336a1/">
+<section id="Linked In" class="social_card">
+    <img src="images/linked_in.png" alt="linkedIn">
+</section>
+</a>
 
 <section id="biography">   
 
@@ -63,10 +71,10 @@
     eingestiegen, um mit Auge für Ästhetik und technischem Sachverstand das volle Paket abliefern zu können.
 </p>
 <ul>
-    <li>2007 - 2020 Grafik-Designer bei Rothenburg & Partner</li>
-    <li>2000 - 2000 Motion-Designer bei TVN</li>
-    <li>1994 - 1999 Studium Visuelle Kommunikation Fachhochschule Hannover </li>
-    <li>1990 - 1994 Studium Politik & Amerikanistik Universität Hannvover</li>
+    <li><strong>2007 - 2020</strong> <br> Grafik-Designer bei Rothenburg & Partner</li>
+    <li><strong> 2000 - 2000</strong> <br> Motion-Designer bei TVN</li>
+    <li><strong>1994 - 1999</strong></strong> <br> Studium Visuelle Kommunikation Fachhochschule Hannover </li>
+    <li><strong>1990 - 1994</strong> <br> Studium Politik & Amerikanistik Universität Hannvover</li>
 </ul>
 </section>
 </main>
