--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Benjamin Tautfest</h1>
+        <h1>Benjamin <span class="last_name">Tautfest</span></h1>
         </header>
 <main>
 
 <nav>
-<a href="#contact">Contact</a>
+<a href="#contact">Contact</a> 
 <a href="#biography">Biography</a>
 </nav>
 
