--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <nav>
 <a href="#contact">Contact</a> 
 <a href="#biography">Biography</a>
+<a href="#skills" class="impressum"> Skillset </a>
 </nav>
 
 <img src="images/ben.jpg" alt="" class="portrait">
-<p> Ich bin Designer und Front-End-Entwickler. Ich entwickle funktionale, responsive und individuelle Webseiten und Webapps.</p>
+<p> I am a designer and front end developer. i build functional, responsive and individual 
+    websites and apps that look awesome and can actually fly. </p>
 
-<h2>Coding Skills</h2>
+<h2 id="skills">Coding Skills</h2>
 <ul>
     <li>HTML</li>
     <li>CSS</li>
@@ -31,19 +33,20 @@
 <h2>Design Skills</h2>
 
 <ul>
-    <li>Illustration</li>
+    <li>digital illustration</li>
     <li>UX-Design</li>
-    <li>Bildbearbeitung</li>
-    <li>Logo-Design</li>
+    <li>image editing</li>
+    <li>logo Design</li>
+    <li>motion design</li>
 </ul>
 
-<section id="contact"> 
-    <h3>Kontakt</h3>
-    <a href="tel:+491795071364">Telefon</a>
-    <a href="mailto:b.tautfest@gmx.de">E-Mail</a>
+<section id="contact" class="contact"> 
+    <h2>Kontakt</h2>
+    <a  href="tel:+491795071364">Telefon</a>
+    <a  href="mailto:b.tautfest@gmx.de">E-Mail</a>
 </section>
 
-<h2>Social</h2>
+<h2>Social Links</h2>
 
 <a href="https://github.com/benjamintautfest">
 <section id="github" class="social_card">
@@ -65,16 +68,17 @@
 
 <section id="biography">   
 
-<h2>Werdegang</h2>
+<h2>Biography</h2>
 <p>
-    Ich bin seit vielen Jahren im Bereich Web-Design tätig und nun auch voll in die Frontend-Entwicklung 
-    eingestiegen, um mit Auge für Ästhetik und technischem Sachverstand das volle Paket abliefern zu können.
+    Since many years i am active as a designer for print web and video. Now i am completing my 
+    skillset by learning to be a capable developer too. With a sharp eye for aesthetics and functionality 
+    I want to be able to deliver the whole package without leaving any questions open.
 </p>
 <ul>
-    <li><strong>2007 - 2020</strong> <br> Grafik-Designer bei Rothenburg & Partner</li>
-    <li><strong> 2000 - 2000</strong> <br> Motion-Designer bei TVN</li>
-    <li><strong>1994 - 1999</strong></strong> <br> Studium Visuelle Kommunikation Fachhochschule Hannover </li>
-    <li><strong>1990 - 1994</strong> <br> Studium Politik & Amerikanistik Universität Hannvover</li>
+    <li><strong>2007 - 2020</strong> <br> graphic designer with Rothenburg & Partner</li>
+    <li><strong> 2000 - 2007</strong> <br> motion designer with TVN Hannover</li>
+    <li><strong>1994 - 1999</strong></strong> <br> study of visual communications at Fachhochschule Hannover </li>
+    <li><strong>1990 - 1994</strong> <br> study politics & american studies university Hannvover</li>
 </ul>
 </section>
 </main>
