Change Skill list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     websites and apps that look awesome and can actually fly. </p>
 
 <h2 id="skills">Coding Skills</h2>
-<ul>
+<ul class="skills">
     <li>HTML</li>
     <li>CSS</li>
     <li>Javascript</li>
@@ -32,7 +32,7 @@
 </ul>
 <h2>Design Skills</h2>
 
-<ul>
+<ul class="skills">
     <li>digital illustration</li>
     <li>UX-Design</li>
     <li>image editing</li>
@@ -46,7 +46,7 @@
     <a  href="mailto:b.tautfest@gmx.de">E-Mail</a>
 </section>
 
-<h2>Social Links</h2>
+<h2>Links</h2>
 
 <a href="https://github.com/benjamintautfest">
 <section id="github" class="social_card">
