--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
 <body>
     <header>
         <h1>Benjamin <span class="last_name">Tautfest</span></h1>
-        </header>
+    </header>
+
 <main>
 
 <nav>
-<a href="#contact">Contact</a> 
-<a href="#biography">Biography</a>
-<a href="#skills" class="impressum"> Skillset </a>
+    <a href="#contact">Contact</a> 
+    <a href="#biography">Biography</a>
+    <a href="#skills" class="impressum"> Skillset </a>
 </nav>
 
+<section class="intro">
+<div class="personal">
 <img src="images/ben.jpg" alt="" class="portrait">
 <p> I am a designer and front end developer. i build functional, responsive and individual 
     websites and apps that look awesome and can actually fly. </p>
-
+</div>
+<div class="skills">
+<div class="coding_skills">
 <h2 id="skills">Coding Skills</h2>
 <ul class="skills">
     <li>HTML</li>
@@ -30,6 +35,8 @@
     <li>Javascript</li>
     <li>React</li>
 </ul>
+</div>
+<div class="design_skills">
 <h2>Design Skills</h2>
 
 <ul class="skills">
@@ -39,6 +46,9 @@
     <li>logo Design</li>
     <li>motion design</li>
 </ul>
+</div>
+</div>
+</section>
 
 <section id="contact" class="contact"> 
     <h2>Kontakt</h2>
@@ -46,6 +56,7 @@
     <a  href="mailto:b.tautfest@gmx.de">E-Mail</a>
 </section>
 
+<section class="links">
 <h2>Links</h2>
 
 <a href="https://github.com/benjamintautfest">
@@ -65,6 +76,8 @@
     <img src="images/linked_in.png" alt="linkedIn">
 </section>
 </a>
+
+</section>
 
 <section id="biography">   
 
