--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <section class="intro">
 <div class="personal">
 <img src="images/ben.jpg" alt="" class="portrait">
-<p> I am a designer and front end developer. i build functional, responsive and individual 
+<p> I am a <em>designer</em> and <em>front end developer</em>. i build functional, responsive and individual 
     websites and apps that look awesome and can actually fly. </p>
 </div>
 <div class="skills">
@@ -49,15 +49,17 @@
 </div>
 </div>
 </section>
+<h2>Kontakt</h2>
 
 <section id="contact" class="contact"> 
-    <h2>Kontakt</h2>
-    <a  href="tel:+491795071364">Telefon</a>
-    <a  href="mailto:b.tautfest@gmx.de">E-Mail</a>
+    <a  href="tel:+491795071364">phone</a>
+    <a  href="mailto:b.tautfest@gmx.de">mail</a>
 </section>
 
-<section class="links">
+<section>
 <h2>Links</h2>
+
+<div class="links">
 
 <a href="https://github.com/benjamintautfest">
 <section id="github" class="social_card">
@@ -68,12 +70,15 @@
 <a href="https://codepen.io/benjamintautfest">
 <section id="codepen" class="social_card">
    <img src="images/codepen.png" alt="codepen">
+
 </section>
 </a>
 
 <a href="https://www.linkedin.com/in/benjamin-tautfest-a40336a1/">
 <section id="Linked In" class="social_card">
+
     <img src="images/linked_in.png" alt="linkedIn">
+</div>
 </section>
 </a>
 
@@ -81,7 +86,7 @@
 
 <section id="biography">   
 
-<h2>Biography</h2>
+<h2 class="centered_text">Biography</h2>
 <p>
     Since many years i am active as a designer for print web and video. Now i am completing my 
     skillset by learning to be a capable developer too. With a sharp eye for aesthetics and functionality 
