Responsive for large screen

--- a/index.html
+++ b/index.html
@@ -49,12 +49,18 @@
 </div>
 </div>
 </section>
+
+<div class="contact_links"> <!-- für die ganz große Auflösung-->
+
 <h2>Kontakt</h2>
+
 
 <section id="contact" class="contact"> 
     <a  href="tel:+491795071364">phone</a>
     <a  href="mailto:b.tautfest@gmx.de">mail</a>
 </section>
+
+
 
 <section>
 <h2>Links</h2>
@@ -83,15 +89,19 @@
 </a>
 
 </section>
+</div>
 
-<section id="biography">   
 
-<h2 class="centered_text">Biography</h2>
+<section id="biography" class="bio">   
+
+    <div><h2 class="centered_text">Biography</h2>
+
 <p>
     Since many years i am active as a designer for print web and video. Now i am completing my 
     skillset by learning to be a capable developer too. With a sharp eye for aesthetics and functionality 
     I want to be able to deliver the whole package without leaving any questions open.
 </p>
+</div>
 <ul>
     <li><strong>2007 - 2020</strong> <br> graphic designer with Rothenburg & Partner</li>
     <li><strong> 2000 - 2007</strong> <br> motion designer with TVN Hannover</li>
