--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 <body>
     <header>
         <h1>Benjamin <span class="last_name">Tautfest</span></h1>
+        <a href="#contact">contact</a>
     </header>
 
 <main>
 
 <nav>
-    <a href="#contact">Contact</a> 
-    <a href="#biography">Biography</a>
-    <a href="#skills" class="impressum"> Skillset </a>
+    <a class="pinklink" href="#biography">Biography</a>
+    <a class="pinklink" href="#skills"> Skillset </a>
 </nav>
 
 <section class="intro">
 <div class="personal">
-<img src="images/ben.jpg" alt="" class="portrait">
+    <div class="wings">
+        <img src="images/ben.jpg" alt="" class="portrait">
+    </div>
 <p> I am a <em>designer</em> and <em>front end developer</em>. i build functional, responsive and individual 
     websites and apps that look awesome and can actually fly. </p>
 </div>
@@ -52,13 +54,15 @@
 
 <div class="contact_links"> <!-- für die ganz große Auflösung-->
 
-<h2>Kontakt</h2>
 
+<div>
+    <h2>Kontakt</h2>
 
 <section id="contact" class="contact"> 
     <a  href="tel:+491795071364">phone</a>
     <a  href="mailto:b.tautfest@gmx.de">mail</a>
 </section>
+</div>
 
 
 
@@ -75,7 +79,7 @@
 
 <a href="https://codepen.io/benjamintautfest">
 <section id="codepen" class="social_card">
-   <img src="images/codepen.png" alt="codepen">
+                <img src="images/codepen.png" alt="codepen">
 
 </section>
 </a>
