--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <section id="biography" class="bio">   
 
-    <div><h2 class="centered_text">Biography</h2>
+    <div><h2>Biography</h2>
 
 <p>
     Since many years i am active as a designer for print web and video. Now i am completing my 
