--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
 </section>
 </div>
 
-
-
-<section>
+<section >
 <h2>Links</h2>
 
 <div class="links">
@@ -109,8 +107,8 @@
 <ul>
     <li><strong>2007 - 2020</strong> <br> graphic designer with Rothenburg & Partner</li>
     <li><strong> 2000 - 2007</strong> <br> motion designer with TVN Hannover</li>
-    <li><strong>1994 - 1999</strong></strong> <br> study of visual communications at Fachhochschule Hannover </li>
-    <li><strong>1990 - 1994</strong> <br> study politics & american studies university Hannvover</li>
+    <li><strong>1994 - 1999</strong></strong> <br> study of Visual Communications at Fachhochschule Hannover </li>
+    <li><strong>1990 - 1994</strong> <br> study politics & american studies University Hannvover</li>
 </ul>
 </section>
 </main>
