Add contact icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Bens Page</title>
 </head>
 <body>
@@ -59,8 +60,8 @@
     <h2>Kontakt</h2>
 
 <section id="contact" class="contact"> 
-    <a  href="tel:+491795071364">phone</a>
-    <a  href="mailto:b.tautfest@gmx.de">mail</a>
+    <a class="link_button"  href="tel:+491795071364"><i class="material-icons">phone</i> phone</a>
+    <a class="link_button"  href="mailto:b.tautfest@gmx.de"><i class="material-icons">mail</i> mail</a>
 </section>
 </div>
 
