Bug fix in html

--- a/index.html
+++ b/index.html
@@ -1,119 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Bens Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Benjamin <span class="last_name">Tautfest</span></h1>
-        <a href="#contact">contact</a>
+      <h1>Benjamin <span class="last_name">Tautfest</span></h1>
+      <a href="#contact">contact</a>
     </header>
 
-<main>
+    <main>
+      <nav>
+        <a class="pinklink" href="#biography">Biography</a>
+        <a class="pinklink" href="#skills"> Skillset </a>
+      </nav>
 
-<nav>
-    <a class="pinklink" href="#biography">Biography</a>
-    <a class="pinklink" href="#skills"> Skillset </a>
-</nav>
+      <section class="intro">
+        <div class="personal">
+          <div class="wings">
+            <img src="images/ben.jpg" alt="" class="portrait" />
+          </div>
+          <p>
+            I am a <em>designer</em> and <em>front end developer</em>. i build
+            functional, responsive and individual websites and apps that look
+            awesome and can actually fly.
+          </p>
+        </div>
+        <div class="skills">
+          <div class="coding_skills">
+            <h2 id="skills">Coding Skills</h2>
+            <ul class="skills">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Javascript</li>
+              <li>React</li>
+            </ul>
+          </div>
+          <div class="design_skills">
+            <h2>Design Skills</h2>
 
-<section class="intro">
-<div class="personal">
-    <div class="wings">
-        <img src="images/ben.jpg" alt="" class="portrait">
-    </div>
-<p> I am a <em>designer</em> and <em>front end developer</em>. i build functional, responsive and individual 
-    websites and apps that look awesome and can actually fly. </p>
-</div>
-<div class="skills">
-<div class="coding_skills">
-<h2 id="skills">Coding Skills</h2>
-<ul class="skills">
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Javascript</li>
-    <li>React</li>
-</ul>
-</div>
-<div class="design_skills">
-<h2>Design Skills</h2>
+            <ul class="skills">
+              <li>digital illustration</li>
+              <li>UX-Design</li>
+              <li>image editing</li>
+              <li>logo Design</li>
+              <li>motion design</li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
-<ul class="skills">
-    <li>digital illustration</li>
-    <li>UX-Design</li>
-    <li>image editing</li>
-    <li>logo Design</li>
-    <li>motion design</li>
-</ul>
-</div>
-</div>
-</section>
+      <div class="contact_links">
+        <!-- für die ganz große Auflösung-->
 
-<div class="contact_links"> <!-- für die ganz große Auflösung-->
+        <div>
+          <h2>Kontakt</h2>
 
+          <section id="contact" class="contact">
+            <a class="link_button" href="tel:+491795071364"
+              ><i class="material-icons">phone</i> phone</a
+            >
+            <a class="link_button" href="mailto:b.tautfest@gmx.de"
+              ><i class="material-icons">mail</i> mail</a
+            >
+          </section>
+        </div>
 
-<div>
-    <h2>Kontakt</h2>
+        <section>
+          <h2>Links</h2>
 
-<section id="contact" class="contact"> 
-    <a class="link_button"  href="tel:+491795071364"><i class="material-icons">phone</i> phone</a>
-    <a class="link_button"  href="mailto:b.tautfest@gmx.de"><i class="material-icons">mail</i> mail</a>
-</section>
-</div>
+          <div class="links">
+            <a href="https://github.com/benjamintautfest">
+              <section id="github" class="social_card">
+                <img src="images/github.png" alt="github" />
+              </section>
+            </a>
 
-<section >
-<h2>Links</h2>
+            <a href="https://codepen.io/benjamintautfest">
+              <section id="codepen" class="social_card">
+                <img src="images/codepen.png" alt="codepen" />
+              </section>
+            </a>
 
-<div class="links">
+            <a href="https://www.linkedin.com/in/benjamin-tautfest-a40336a1/">
+              <section id="Linked In" class="social_card">
+                <img src="images/linked_in.png" alt="linkedIn" />
+              </section>
+            </a>
+          </div>
+        </section>
+      </div>
 
-<a href="https://github.com/benjamintautfest">
-<section id="github" class="social_card">
-    <img src="images/github.png" alt="github">
-</section>
-</a>
+      <section id="biography" class="bio">
+        <div>
+          <h2>Biography</h2>
 
-<a href="https://codepen.io/benjamintautfest">
-<section id="codepen" class="social_card">
-                <img src="images/codepen.png" alt="codepen">
+          <p>
+            Since many years i am active as a designer for print web and video.
+            Now i am completing my skillset by learning to be a capable
+            developer too. With a sharp eye for aesthetics and functionality I
+            want to be able to deliver the whole package without leaving any
+            questions open.
+          </p>
+        </div>
+        <ul>
+          <li>
+            <strong>2007 - 2020</strong> <br />
+            graphic designer with Rothenburg & Partner
+          </li>
+          <li>
+            <strong> 2000 - 2007</strong> <br />
+            motion designer with TVN Hannover
+          </li>
+          <li>
+            <strong>1994 - 1999</strong> <br />
+            study of Visual Communications at Fachhochschule Hannover
+          </li>
+          <li>
+            <strong>1990 - 1994</strong> <br />
+            study politics & american studies University Hannvover
+          </li>
+        </ul>
+      </section>
+    </main>
 
-</section>
-</a>
-
-<a href="https://www.linkedin.com/in/benjamin-tautfest-a40336a1/">
-<section id="Linked In" class="social_card">
-
-    <img src="images/linked_in.png" alt="linkedIn">
-</div>
-</section>
-</a>
-
-</section>
-</div>
-
-
-<section id="biography" class="bio">   
-
-    <div><h2>Biography</h2>
-
-<p>
-    Since many years i am active as a designer for print web and video. Now i am completing my 
-    skillset by learning to be a capable developer too. With a sharp eye for aesthetics and functionality 
-    I want to be able to deliver the whole package without leaving any questions open.
-</p>
-</div>
-<ul>
-    <li><strong>2007 - 2020</strong> <br> graphic designer with Rothenburg & Partner</li>
-    <li><strong> 2000 - 2007</strong> <br> motion designer with TVN Hannover</li>
-    <li><strong>1994 - 1999</strong></strong> <br> study of Visual Communications at Fachhochschule Hannover </li>
-    <li><strong>1990 - 1994</strong> <br> study politics & american studies University Hannvover</li>
-</ul>
-</section>
-</main>
-
-<footer>&copy; Benjamin Tautfest 2020</footer>
-</body>
+    <footer>&copy; Benjamin Tautfest 2020</footer>
+  </body>
 </html>
